/*
 * Copyright 2025-2026 Johannes Zemlin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
package ai.koryki.iql.query;

import java.util.ArrayList;
import java.util.List;

public class Exists {
    private String crit;
    private Source source;
    private String parent;
    private LogicalExpression filter;
    private LogicalExpression having;

    private List<Join> join = new ArrayList<>();

    public List<Join> getJoin() {
        return join;
    }

    public void setJoin(List<Join> join) {
        this.join = join;
    }

    public Source getStart() {
        return source;
    }

    public void setSource(Source source) {
        this.source = source;
    }

    public String getCrit() {
        return crit;
    }

    public void setCrit(String crit) {
        this.crit = crit;
    }

    public String getParent() {
        return parent;
    }

    public void setParent(String parent) {
        this.parent = parent;
    }

    public LogicalExpression getFilter() {
        return filter;
    }

    public void setFilter(LogicalExpression filter) {
        this.filter = filter;
    }

    public LogicalExpression getHaving() {
        return having;
    }

    public void setHaving(LogicalExpression having) {
        this.having = having;
    }

    /**
     * The columns written out instead of a criterion, or {@code null} when {@link #getCrit()} names
     * one. Exactly one of the two is set.
     */
    private JoinColumns columns;

    public JoinColumns getColumns() {
        return columns;
    }

    public void setColumns(JoinColumns columns) {
        this.columns = columns;
    }
}
